my own calculator

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "homepage": "https://faresmer.github.io/CalculatorApp",
+
+
   "name": "profilecard",
   "private": true,
   "version": "0.0.0",
@@ -7,9 +10,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -25,3 +31,4 @@
     "vite": "^7.0.4"
   }
 }
+
